// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`keyframes basic 1`] = `
@keyframes animation-0 {
  from {
    color: green;
  }

  to {
    color: hotpink;
  }
}

.emotion-0 {
  -webkit-animation: animation-0;
  animation: animation-0;
}

<div
  className="emotion-0"
>
  animation-1bi8wtt
</div>
`;

exports[`keyframes basic 2`] = `
Array [
  ".css-1mzou9w{-webkit-animation:animation-1bi8wtt;animation:animation-1bi8wtt;}",
  "@-webkit-keyframes animation-1bi8wtt{from{color:green;}to{color:hotpink;}}",
  "@keyframes animation-1bi8wtt{from{color:green;}to{color:hotpink;}}",
]
`;

exports[`keyframes keyframes used in css call 1`] = `
@keyframes animation-0 {
  from {
    color: green;
  }

  to {
    color: hotpink;
  }
}

@keyframes animation-1 {
  from {
    color: green;
  }

  to {
    color: yellow;
  }
}

.emotion-0 {
  -webkit-animation: animation-0 1s animation-1;
  animation: animation-0 1s animation-1;
}

<div
  className="emotion-0"
>
  animation-1bi8wtt
</div>
`;

exports[`keyframes keyframes used in css call 2`] = `
Array [
  ".css-nq4jxu{-webkit-animation:animation-1bi8wtt 1s animation-1ajb83a;animation:animation-1bi8wtt 1s animation-1ajb83a;}",
  "@-webkit-keyframes animation-1bi8wtt{from{color:green;}to{color:hotpink;}}",
  "@keyframes animation-1bi8wtt{from{color:green;}to{color:hotpink;}}",
  "@-webkit-keyframes animation-1ajb83a{from{color:green;}to{color:yellow;}}",
  "@keyframes animation-1ajb83a{from{color:green;}to{color:yellow;}}",
]
`;

exports[`keyframes multiple keyframes object 1`] = `
@keyframes animation-0 {
  from {
    color: green;
  }

  to {
    color: hotpink;
  }
}

@keyframes animation-1 {
  from {
    color: green;
  }

  to {
    color: yellow;
  }
}

.emotion-0 {
  -webkit-animation: animation-0 1s animation-1;
  animation: animation-0 1s animation-1;
}

<div
  className="emotion-0"
>
  animation-1bi8wtt
</div>
`;

exports[`keyframes multiple keyframes object 2`] = `
Array [
  ".css-1jqzi3u{-webkit-animation:animation-1bi8wtt 1s animation-1ajb83a;animation:animation-1bi8wtt 1s animation-1ajb83a;}",
  "@-webkit-keyframes animation-1ajb83a{from{color:green;}to{color:yellow;}}",
  "@keyframes animation-1ajb83a{from{color:green;}to{color:yellow;}}",
  "@-webkit-keyframes animation-1bi8wtt{from{color:green;}to{color:hotpink;}}",
  "@keyframes animation-1bi8wtt{from{color:green;}to{color:hotpink;}}",
]
`;

exports[`keyframes object 1`] = `
@keyframes animation-0 {
  from {
    color: green;
  }

  to {
    color: hotpink;
  }
}

.emotion-0 {
  -webkit-animation: animation-0 1s;
  animation: animation-0 1s;
}

<div
  className="emotion-0"
>
  animation-o4c3es
</div>
`;

exports[`keyframes object 2`] = `
Array [
  ".css-d88cqt{-webkit-animation:animation-o4c3es 1s;animation:animation-o4c3es 1s;}",
  "@-webkit-keyframes animation-o4c3es{from{color:green;}to{color:hotpink;}}",
  "@keyframes animation-o4c3es{from{color:green;}to{color:hotpink;}}",
]
`;

exports[`keyframes object with animation and opaque keyframes as value 1`] = `
@keyframes animation-0 {
  from {
    color: green;
  }

  to {
    color: hotpink;
  }
}

.emotion-0 {
  -webkit-animation: animation-0;
  animation: animation-0;
  -webkit-animation-duration: 1s;
  animation-duration: 1s;
}

<div
  className="emotion-0"
>
  animation-1bi8wtt
</div>
`;

exports[`keyframes object with animation and opaque keyframes as value 2`] = `
Array [
  ".css-g32qbw{-webkit-animation:animation-1bi8wtt;animation:animation-1bi8wtt;-webkit-animation-duration:1s;animation-duration:1s;}",
  "@-webkit-keyframes animation-1bi8wtt{from{color:green;}to{color:hotpink;}}",
  "@keyframes animation-1bi8wtt{from{color:green;}to{color:hotpink;}}",
]
`;

exports[`keyframes object with animationName and opaque keyframes as value 1`] = `
@keyframes animation-0 {
  from {
    color: green;
  }

  to {
    color: hotpink;
  }
}

.emotion-0 {
  -webkit-animation-name: animation-0;
  animation-name: animation-0;
  -webkit-animation-duration: 1s;
  animation-duration: 1s;
}

<div
  className="emotion-0"
>
  animation-1bi8wtt
</div>
`;

exports[`keyframes object with animationName and opaque keyframes as value 2`] = `
Array [
  ".css-wo7teo{-webkit-animation-name:animation-1bi8wtt;animation-name:animation-1bi8wtt;-webkit-animation-duration:1s;animation-duration:1s;}",
  "@-webkit-keyframes animation-1bi8wtt{from{color:green;}to{color:hotpink;}}",
  "@keyframes animation-1bi8wtt{from{color:green;}to{color:hotpink;}}",
]
`;

exports[`keyframes object with animationName and string keyframes as value 1`] = `
@keyframes animation-0 {
  from {
    color: green;
  }

  to {
    color: hotpink;
  }
}

.emotion-0 {
  -webkit-animation-name: animation-0;
  animation-name: animation-0;
  -webkit-animation-duration: 1s;
  animation-duration: 1s;
}

<div
  className="emotion-0"
>
  animation-1bi8wtt
</div>
`;

exports[`keyframes object with animationName and string keyframes as value 2`] = `
Array [
  ".css-wo7teo{-webkit-animation-name:animation-1bi8wtt;animation-name:animation-1bi8wtt;-webkit-animation-duration:1s;animation-duration:1s;}",
  "@-webkit-keyframes animation-1bi8wtt{from{color:green;}to{color:hotpink;}}",
  "@keyframes animation-1bi8wtt{from{color:green;}to{color:hotpink;}}",
]
`;

exports[`keyframes object with string keyframes 1`] = `
@keyframes animation-0 {
  from {
    color: green;
  }

  to {
    color: hotpink;
  }
}

.emotion-0 {
  -webkit-animation: animation-0 1s;
  animation: animation-0 1s;
}

<div
  className="emotion-0"
>
  animation-1bi8wtt
</div>
`;

exports[`keyframes object with string keyframes 2`] = `
Array [
  ".css-1wh2ide{-webkit-animation:animation-1bi8wtt 1s;animation:animation-1bi8wtt 1s;}",
  "@-webkit-keyframes animation-1bi8wtt{from{color:green;}to{color:hotpink;}}",
  "@keyframes animation-1bi8wtt{from{color:green;}to{color:hotpink;}}",
]
`;

exports[`keyframes without css call 1`] = `
@keyframes animation-0 {
  from {
    color: green;
  }

  to {
    color: hotpink;
  }
}

.emotion-0 {
  -webkit-animation: animation-0;
  animation: animation-0;
}

<div
  className="emotion-0"
>
  animation-1bi8wtt
</div>
`;

exports[`keyframes without css call 2`] = `
Array [
  ".css-1mzou9w{-webkit-animation:animation-1bi8wtt;animation:animation-1bi8wtt;}",
  "@-webkit-keyframes animation-1bi8wtt{from{color:green;}to{color:hotpink;}}",
  "@keyframes animation-1bi8wtt{from{color:green;}to{color:hotpink;}}",
]
`;
